# expenses-control-app

./: pyproject.toml
expenses-control-app/: pyproject.toml
expenses-control-app/expenses_control_app/: main.py
expenses-control-app/expenses_control_app/data_ingestion/: data_ingestor.py
expenses-control-app/expenses_control_app/data_models/: data_classes.py  enums.py  transaction_types.py
expenses-control-app/expenses_control_app/data_processing/: data_processor.py
expenses-control-app/expenses_control_app/utils/: aws_helper.py  constants.py  logger.py
