[tool.poetry]
name = "expenses-control-app"
version = "0.1.0"
description = ""
authors = ["Diego Quintana Esteve <diego.quintana.esteve@echobox.com>"]
readme = "README.md"
packages = [{include = "expenses_control_app"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
